--- a/package.json
+++ b/package.json
@@ -16,15 +16,16 @@
     "@react-navigation/native-stack": "^6.9.13",
     "@ui-kitten/components": "^5.3.1",
     "expo": "~48.0.18",
+    "expo-file-system": "~15.2.2",
     "expo-status-bar": "~1.4.4",
+    "mobx": "^6.9.0",
     "react": "18.2.0",
     "react-native": "0.71.8",
     "react-native-pager-view": "6.1.2",
     "react-native-paper": "^5.9.1",
     "react-native-safe-area-context": "4.5.0",
     "react-native-svg": "^13.9.0",
-    "react-native-tab-view": "^3.5.2",
-    "expo-file-system": "~15.2.2"
+    "react-native-tab-view": "^3.5.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
