--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "expo-file-system": "~15.2.2",
     "expo-status-bar": "~1.4.4",
     "mobx": "^6.9.0",
+    "mobx-react": "^7.6.0",
     "react": "18.2.0",
     "react-native": "0.71.8",
     "react-native-pager-view": "6.1.2",
