--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@react-navigation/material-top-tabs": "^6.6.3",
     "@react-navigation/native": "^6.1.7",
     "@react-navigation/native-stack": "^6.9.13",
+    "@sentry/react-native": "4.15.2",
     "@ui-kitten/components": "^5.3.1",
     "expo": "~48.0.18",
     "expo-file-system": "~15.2.2",
@@ -24,8 +25,9 @@
     "react-native": "0.71.8",
     "react-native-pager-view": "6.1.2",
     "react-native-paper": "^5.9.1",
-    "react-native-safe-area-context": "4.5.0",
-    "react-native-svg": "^13.4.0",
+    "react-native-safe-area-context": "^4.5.0",
+    "react-native-screens": "~3.20.0",
+    "react-native-svg": "13.4.0",
     "react-native-tab-view": "^3.5.2"
   },
   "devDependencies": {
