--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "expo": "~48.0.18",
     "expo-file-system": "~15.2.2",
     "expo-status-bar": "~1.4.4",
+    "faunadb": "^4.8.0",
     "mobx": "^6.9.0",
     "mobx-react": "^7.6.0",
     "react": "18.2.0",
