--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@react-navigation/material-top-tabs": "^6.6.3",
     "@react-navigation/native": "^6.1.7",
     "@react-navigation/native-stack": "^6.9.13",
+    "@react-navigation/stack": "^6.3.17",
     "@sentry/react-native": "4.15.2",
     "@ui-kitten/components": "^5.3.1",
     "expo": "~48.0.18",
@@ -25,6 +26,7 @@
     "mobx-react": "^7.6.0",
     "react": "18.2.0",
     "react-native": "0.71.8",
+    "react-native-gesture-handler": "^2.12.0",
     "react-native-pager-view": "6.1.2",
     "react-native-paper": "^5.9.1",
     "react-native-safe-area-context": "^4.5.0",
