--- a/app.json
+++ b/app.json
@@ -3,7 +3,7 @@
     "name": "LFToolbox",
     "slug": "LFToolbox",
     "owner": "omdesti",
-    "version": "1.0.0",
+    "version": "0.9.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
     "userInterfaceStyle": "light",
@@ -17,14 +17,15 @@
     ],
     "ios": {
       "supportsTablet": true,
-      "bundleIdentifier": "7JYRAU3BVX.com.OMDESTI.LFToolbox"
+      "bundleIdentifier": "com.omdesti.lftoolbox",
+      "buildNumber": "1"
     },
     "android": {
       "adaptiveIcon": {
-        "foregroundImage": "./assets/adaptive-icon.png",
+        "foregroundImage": "./assets/icon.png",
         "backgroundColor": "#ffffff"
       },
-      "package": "com.OMDESTI.LFToolbox"
+      "package": "com.omdesti.lftoolbox"
     },
     "web": {
       "favicon": "./assets/favicon.png"
