--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-native-draggable-flatlist": "^4.0.1",
     "react-native-gesture-handler": "~2.9.0",
     "react-native-get-random-values": "~1.8.0",
+    "react-native-keyboard-aware-scroll-view": "^0.9.5",
     "react-native-pager-view": "6.1.2",
     "react-native-paper": "^5.9.1",
     "react-native-reanimated": "~2.14.4",
