config: updated owner

--- a/app.json
+++ b/app.json
@@ -2,7 +2,7 @@
   "expo": {
     "name": "LFU Companion",
     "slug": "lfu-companion",
-    "owner": "Madstone.Dev",
+    "owner": "madstone.dev",
     "version": "1.0.2",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
