build: reverting slug to avoid clash with Play Console key

--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
   "expo": {
     "name": "LFU Companion",
-    "slug": "lfu-companion",
+    "slug": "LFToolbox",
     "owner": "madstone.dev",
     "version": "1.0.2",
     "orientation": "portrait",
