--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "@clerk/clerk-expo": "^0.18.12",
     "@eva-design/eva": "^2.2.0",
     "@expo/vector-icons": "^13.0.0",
+    "@react-native-async-storage/async-storage": "1.17.11",
+    "@react-navigation/drawer": "^6.6.3",
     "@react-navigation/material-top-tabs": "^6.6.3",
     "@react-navigation/native": "^6.1.7",
     "@react-navigation/native-stack": "^6.9.13",
@@ -33,11 +35,10 @@
     "react-native-pager-view": "6.1.2",
     "react-native-paper": "^5.9.1",
     "react-native-reanimated": "~2.14.4",
-    "react-native-safe-area-context": "^4.5.0",
+    "react-native-safe-area-context": "4.5.0",
     "react-native-screens": "~3.20.0",
     "react-native-svg": "13.4.0",
-    "react-native-tab-view": "^3.5.2",
-    "@react-native-async-storage/async-storage": "1.17.11"
+    "react-native-tab-view": "^3.5.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
