--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "faunadb": "^4.8.0",
     "mobx": "^6.9.0",
     "mobx-react": "^7.6.0",
+    "moment-timezone": "^0.5.43",
     "react": "18.2.0",
     "react-native": "0.71.8",
     "react-native-draggable-flatlist": "^4.0.1",
