--- a/package.json
+++ b/package.json
@@ -20,13 +20,14 @@
     "@react-navigation/stack": "^6.3.17",
     "@sentry/react-native": "4.15.2",
     "@ui-kitten/components": "^5.3.1",
+    "date-fns": "^2.30.0",
+    "date-fns-tz": "^2.0.0",
     "expo": "~48.0.18",
     "expo-file-system": "~15.2.2",
     "expo-status-bar": "~1.4.4",
     "faunadb": "^4.8.0",
     "mobx": "^6.9.0",
     "mobx-react": "^7.6.0",
-    "moment-timezone": "^0.5.43",
     "react": "18.2.0",
     "react-native": "0.71.8",
     "react-native-draggable-flatlist": "^4.0.1",
