--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "mobx-react": "^7.6.0",
     "react": "18.2.0",
     "react-native": "0.71.8",
+    "react-native-chart-kit": "^6.12.0",
     "react-native-draggable-flatlist": "^4.0.1",
     "react-native-gesture-handler": "~2.9.0",
     "react-native-get-random-values": "~1.8.0",
