--- a/app.json
+++ b/app.json
@@ -32,6 +32,7 @@
       "favicon": "./assets/favicon.png"
     },
     "extra": {
+      "FAUNA_API_KEY": "fnAFKMa7a0AAzqE_TiYbGI0dRIQff_YZqyfieJpo",
       "eas": {
         "projectId": "9d10aa85-c883-4b34-a4ae-58084e8650ec"
       }
