--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "date-fns": "^2.30.0",
     "date-fns-tz": "^2.0.0",
     "expo": "~48.0.18",
+    "expo-constants": "~14.2.1",
     "expo-file-system": "~15.2.2",
     "expo-status-bar": "~1.4.4",
     "faunadb": "^4.8.0",
@@ -41,8 +42,7 @@
     "react-native-safe-area-context": "4.5.0",
     "react-native-screens": "~3.20.0",
     "react-native-svg": "13.4.0",
-    "react-native-tab-view": "^3.5.2",
-    "expo-constants": "~14.2.1"
+    "react-native-tab-view": "^3.5.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
