--- a/app.json
+++ b/app.json
@@ -5,7 +5,7 @@
     "owner": "madstone.dev",
     "version": "1.1.0",
     "orientation": "portrait",
-    "icon": "./assets/new-icon.png",
+    "icon": "./assets/icon_new.png",
     "userInterfaceStyle": "light",
     "splash": {
       "resizeMode": "contain",
@@ -17,15 +17,15 @@
     "ios": {
       "supportsTablet": true,
       "bundleIdentifier": "com.omdesti.lftoolbox",
-      "buildNumber": "12"
+      "buildNumber": "13"
     },
     "android": {
       "adaptiveIcon": {
-        "foregroundImage": "./assets/new-icon.png",
-        "backgroundColor": "#ffffff"
+        "foregroundImage": "./assets/icon_foreground.png",
+        "backgroundImage": "./assets/icon_background.png"
       },
       "package": "com.omdesti.lftoolbox",
-      "versionCode": 12
+      "versionCode": 13
     },
     "web": {
       "favicon": "./assets/favicon.png"
