--- a/package.json
+++ b/package.json
@@ -22,11 +22,13 @@
     "@ui-kitten/components": "^5.3.1",
     "date-fns": "^2.30.0",
     "date-fns-tz": "^2.0.0",
+    "dotenv": "^16.3.1",
     "expo": "~48.0.18",
     "expo-constants": "~14.2.1",
     "expo-file-system": "~15.2.2",
     "expo-status-bar": "~1.4.4",
     "faunadb": "^4.8.0",
+    "firebase": "^10.1.0",
     "mobx": "^6.9.0",
     "mobx-react": "^7.6.0",
     "react": "18.2.0",
