--- a/package.json
+++ b/package.json
@@ -12,36 +12,35 @@
     "@clerk/clerk-expo": "^0.18.17",
     "@eva-design/eva": "^2.2.0",
     "@expo/vector-icons": "^13.0.0",
-    "@react-native-async-storage/async-storage": "1.17.11",
+    "@react-native-async-storage/async-storage": "1.18.2",
     "@react-navigation/drawer": "^6.6.3",
     "@react-navigation/material-top-tabs": "^6.6.3",
     "@react-navigation/native": "^6.1.7",
     "@react-navigation/native-stack": "^6.9.13",
     "@react-navigation/stack": "^6.3.17",
-    "@sentry/react-native": "4.15.2",
+    "@sentry/react-native": "5.5.0",
     "@ui-kitten/components": "^5.3.1",
     "date-fns": "^2.30.0",
     "date-fns-tz": "^2.0.0",
-    "expo": "~48.0.18",
-    "expo-constants": "~14.2.1",
-    "expo-file-system": "~15.2.2",
-    "expo-status-bar": "~1.4.4",
-    "faunadb": "^4.8.0",
+    "expo": "^49.0.0",
+    "expo-constants": "~14.4.2",
+    "expo-file-system": "~15.4.2",
+    "expo-status-bar": "~1.6.0",
     "mobx": "^6.9.0",
     "mobx-react": "^7.6.0",
     "react": "18.2.0",
-    "react-native": "0.71.8",
+    "react-native": "0.72.3",
     "react-native-chart-kit": "^6.12.0",
     "react-native-draggable-flatlist": "^4.0.1",
-    "react-native-gesture-handler": "~2.9.0",
-    "react-native-get-random-values": "~1.8.0",
+    "react-native-gesture-handler": "~2.12.0",
+    "react-native-get-random-values": "~1.9.0",
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
-    "react-native-pager-view": "6.1.2",
+    "react-native-pager-view": "6.2.0",
     "react-native-paper": "^5.9.1",
-    "react-native-reanimated": "~2.14.4",
-    "react-native-safe-area-context": "4.5.0",
-    "react-native-screens": "~3.20.0",
-    "react-native-svg": "13.4.0",
+    "react-native-reanimated": "~3.3.0",
+    "react-native-safe-area-context": "4.6.3",
+    "react-native-screens": "~3.22.0",
+    "react-native-svg": "13.9.0",
     "react-native-tab-view": "^3.5.2"
   },
   "devDependencies": {
