--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@clerk/clerk-expo": "^0.18.17",
+    "@clerk/clerk-react": "^4.23.2",
     "@eva-design/eva": "^2.2.0",
     "@expo/vector-icons": "^13.0.0",
     "@react-native-async-storage/async-storage": "1.18.2",
@@ -26,7 +27,7 @@
     "expo-constants": "~14.4.2",
     "expo-file-system": "~15.4.2",
     "expo-status-bar": "~1.6.0",
-    "mobx": "^6.9.0",
+    "mobx": "^6.10.0",
     "mobx-react": "^7.6.0",
     "react": "18.2.0",
     "react-native": "0.72.3",
@@ -36,12 +37,13 @@
     "react-native-get-random-values": "~1.9.0",
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
     "react-native-pager-view": "6.2.0",
-    "react-native-paper": "^5.9.1",
+    "react-native-paper": "^5.10.0",
     "react-native-reanimated": "~3.3.0",
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0",
     "react-native-svg": "13.9.0",
-    "react-native-tab-view": "^3.5.2"
+    "react-native-tab-view": "^3.5.2",
+    "react-native-web": "~0.19.6"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
