--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "lftoolbox",
-  "version": "0.9.0",
+  "name": "lfucompanion",
+  "version": "1.1.1",
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
     "start": "expo start",
@@ -46,7 +46,7 @@
     "react-native-svg": "13.9.0",
     "react-native-tab-view": "^3.5.2",
     "react-native-web": "~0.19.6",
-    "expo-apple-authentication": "~6.0.1"
+    "expo-apple-authentication": "~6.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
